@@ -3,7 +3,7 @@
 //===== By: ================================================== 
 //= L0ne_W0lf
 //===== Current Version: ===================================== 
-//= 1.1
+//= 1.2
 //===== Compatible With: ===================================== 
 //= eAthena SVN
 //===== Description: ========================================= 
@@ -13,6 +13,8 @@
 //===== Additional Comments: ================================= 
 //= 1.0 First version.
 //= 1.1 Removed a disablenpc from #102FShadowDust1. (bugreport:4415)
+//= 1.2 Added ends to several NPCs which would allow you to restart timers.
+//=     Added some missing stopnpctimers to npcs. (bugreport:4418)
 //============================================================ 
 
 alberta,214,77,6	script	Captain Janssen	709,{
@@ -480,6 +482,8 @@ e_tower,151,185,4	script	Purification Stone#et2	844,{
 }
 
 1@tower,29,365,1	script	#1F Controller	844,{
+	end;
+
 OnInstanceInit:
 	areamonster "1@tower",7,351,17,387,"Metaling",1613,15,instance_npcname("#1F Controller", instance_id())+"::OnMyMobDead";
 	areamonster "1@tower",7,351,17,387,"Marin",1242,5,instance_npcname("#1F Controller", instance_id())+"::OnMyMobDead";
@@ -3818,6 +3822,8 @@ OnInstanceInit:
 }
 
 6@tower,45,89,2	script	Spring of Life#2	844,{
+	end;
+
 OnEnable:
 	specialeffect EF_BUBBLE;
 	initnpctimer;
@@ -3830,6 +3836,8 @@ OnTimer2000:
 }
 
 6@tower,45,89,2	script	Spring of Life#3	844,{
+	end;
+
 OnEnable:
 	specialeffect EF_BUBBLE;
 	initnpctimer;
@@ -3860,6 +3868,8 @@ OnMyMobDead:
 }
 
 6@tower,156,151,2	script	#1st Beeper	844,{
+	end;
+
 OnEnable:
 	initnpctimer;
 	end;
@@ -3882,6 +3892,7 @@ OnTimer15500:
 
 OnTimer20500:
 	instance_announce 0,"Let's see who runs fastest. Are you ready?",bc_map,"0x00ffcc";
+	stopnpctimer;
 	areamonster "6@tower",151,66,153,106,"Bone Guardian",1152,50,instance_npcname("#1st Beeper", instance_id())+"::OnMyMobDead";
 	areamonster "6@tower",158,66,160,106,"Bone Guardian",1152,50,instance_npcname("#1st Beeper", instance_id())+"::OnMyMobDead";
 	end;
@@ -3898,6 +3909,8 @@ OnMyMobDead:
 }
 
 6@tower,156,151,2	script	#2nd Beeper	844,{
+	end;
+
 OnEnable:
 	initnpctimer;
 	end;
@@ -3912,6 +3925,7 @@ OnTimer5500:
 
 OnTimer10500:
 	instance_announce 0,"I demand an encore!",bc_map,"0x00ffcc";
+	stopnpctimer;
 	areamonster "6@tower",151,66,153,106,"Wind Guardian",1263,30,instance_npcname("#2nd Beeper", instance_id())+"::OnMyMobDead";
 	areamonster "6@tower",158,66,160,106,"Wind Guardian",1263,30,instance_npcname("#2nd Beeper", instance_id())+"::OnMyMobDead";
 	end;
@@ -3928,6 +3942,8 @@ OnMyMobDead:
 }
 
 6@tower,156,151,2	script	#3rd Beeper	844,{
+	end;
+
 OnEnable:
 	initnpctimer;
 	end;
@@ -3942,6 +3958,7 @@ OnTimer5500:
 
 OnTimer10500:
 	instance_announce 0,"How would you like to play one more round?",bc_map,"0x00ffcc";
+	stopnpctimer;
 	areamonster "6@tower",151,66,153,106,"Sword Edge Guardian",1132,20,instance_npcname("#3rd Beeper", instance_id())+"::OnMyMobDead";
 	areamonster "6@tower",158,66,160,106,"Sword Edge Guardian",1132,20,instance_npcname("#3rd Beeper", instance_id())+"::OnMyMobDead";
 	end;
@@ -3958,6 +3975,8 @@ OnMyMobDead:
 }
 
 6@tower,156,151,2	script	#4th Beeper	844,{
+	end;
+
 OnEnable:
 	initnpctimer;
 	end;
@@ -4053,6 +4072,8 @@ OnTimer10500:
 }
 
 6@tower,169,127,2	script	#Effect30	844,{
+	end;
+
 OnInstanceInit:
 	disablenpc instance_npcname("#Effect30", instance_id());
 	end;
@@ -4069,6 +4090,8 @@ OnTimer1000:
 }
 
 6@tower,169,127,2	script	#Effect31	844,{
+	end;
+
 OnInstanceInit:
 	disablenpc instance_npcname("#Effect31", instance_id());
 	end;
